All done for homework 5 (animation and modal window)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="nav">
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="link nav-link" href="">Студия</a>
+                        <a class="link nav-link current-page" href="">Студия</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="link" href="./portfolio.html">Портфолио</a>
