--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
         <nav class="nav">
             <ul class="nav-list list">
                 <li class="nav-list-item">
-                    <a class="link" href="">Студия</a>
+                    <a class="link" href="./index.html">Студия</a>
                 </li>
                 <li class="nav-list-item">
-                    <a class="link" href="./portfolio.html">Портфолио</a>
+                    <a class="link current-page" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="nav-list-item">
                     <a class="link" href="">Контакты</a>
